modules/gdscript/tests/scripts/parser/errors/annotation_unrecognized.gd
@hello_world
func test():
    pass
